Fix regression with split background positioning on Firefox and Edge

--- a/src/css/Splits.scss
+++ b/src/css/Splits.scss
@@ -11,7 +11,6 @@
 
   .split {
     display: table-row;
-    height: 24px;
     line-height: 20px;
 
     @include time;
@@ -19,7 +18,6 @@
     .current-split-background {
       position: absolute;
       width: 100%;
-      height: 24px;
       padding: 0;
     }
 
